--- a/src/components/spacex-cards/spacex-cards.styles.scss
+++ b/src/components/spacex-cards/spacex-cards.styles.scss
@@ -4,8 +4,8 @@
     /* background-color: rgb(255, 141, 1); */
     background-color: rgba(233, 237, 237, 0.523);;
     
-    border: 1px solid rgb(4, 4, 22);
-            color: #07090b;
+    border: 1px solid rgb(41, 41, 231);
+            color: #4383c3;
     /* color:#A7A9AC; */
     padding: 35px;
 
@@ -30,10 +30,4 @@
   width: 50%;
   /* height: 50%; */
   padding: 5px;
-}
-.ReactPlayer {
-    margin-left: auto;
-  margin-right: auto;
-  width: auto;
-  position: relative; 
 }
