--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,34 @@
-.App {
+body {
+  /* font-family: 'Open Sans Condensed';
+   */
+   font-family: 'Exo 2', sans-serif;
+  background-color: #f0f1f1;
   text-align: center;
+
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+
+  font-size: calc(10px + 2vmin);
+  color: rgb(54, 21, 21);
+  /* margin: 20px; */
+  /* padding: 22px; */
+}
+a{
+  text-decoration: none;
+  color: #000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
+
+
+/* .App-header {
+  background-color: #0ae5f1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +36,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+}  */
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
