--- a/src/components/spacex-list/spacex-list.styles.scss
+++ b/src/components/spacex-list/spacex-list.styles.scss
@@ -1,11 +1,37 @@
-.card-list {
+.card-list { 
+        max-width: auto;
+        margin: 0 auto;
+        display: grid;
+        // grid-template-columns: 1fr 1fr;
+        // grid-gap: 5px;
+        background-color: rgb(4, 15, 10);
     
-    width: 100vw;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 5px;
-    background-color: rgb(0, 0, 0);
-
-
+    
 }
+    // width: auto;
+    // margin: 0 auto;
+    // padding: 20px;
+    // display: grid;
+    // grid-gap: 5px;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-evenly;
+    // align-content: flex-start;
+    // align-items: center;
+    // flex-wrap:  wrap;
+    // position: absolute;
+    // grid-column-gap: 34px;
+    // grid-template-columns: 2fr 2fr;
+    // background-color: rgb(128, 83, 101);
+
+// }
+.grid-container {
+    // display: grid;
+    // grid-column-gap: 10px;
+    // grid-template-columns: 1fr 1fr;
+
+
+    // background-color: rgb(62, 236, 163);
+
+
+  }
