--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -13,15 +13,22 @@
     }
   
     .options {
-      width: 55%;
+      width: 100%;
       height: 100%;
       display: flex;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: center;
+
+      margin-right: 20px;
   
       .option {
         padding: 15px 15px;
+        
         cursor: pointer;
+      }
+
+      .option a {
+        padding-left: 20px;
       }
     }
 }
