--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 17px;
+    margin-bottom: 10px;
 
     .title {
       margin: 10px;
@@ -14,4 +15,6 @@
       display: flex;
       justify-content:space-between;
     }
+
+    
   }
